syntax = "proto3";

option java_package = "emu.lunarcore.proto";

message ChessRogueRollDiceCsReq {
    uint32 entity_id = 4;
}