syntax = "proto3";

option java_package = "emu.lunarcore.proto";

message RogueDialogueEventParam {
	bool is_valid = 11;
	uint32 dialogue_event_id = 13;
	int32 int_value = 15;
	float ratio = 6;
	uint32 arg_id = 5;
}